# sam-console

./: .clang-format  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  README.md  configure_build.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  sam-console.pro  samconsolemain.cpp  samconsolemain.hpp  samconsolesplash.cpp  samconsolesplash.hpp
.github/workflows/: windows_console_build.yml  windows_console_cmake.yml
FIM-page/: fimpage.cpp  fimpage.hpp
FIM-page/events-monitor/: eventsmonitor.cpp  eventsmonitor.hpp
about-page/: aboutpage.cpp  aboutpage.hpp
control-bar/: controlbar.cpp  controlbar.hpp  pausebutton.cpp  pausebutton.h  pausebutton.hpp  scanareascontrollerbutton.cpp  scanareascontrollerbutton.hpp  scanbutton.cpp  scanbutton.h  scanbutton.hpp  stopbutton.cpp  stopbutton.hpp
dummy-sam-engine/: CMakeLists.txt  dummy-sam-engine.cpp  dummy-sam-engine.hpp
home-page/: homepage.cpp  homepage.hpp
home-page/control-bar/: controlbar.cpp  controlbar.hpp  pausebutton.cpp  pausebutton.hpp  resumebutton.cpp  resumebutton.hpp  scanareascontrollerbutton.cpp  scanareascontrollerbutton.hpp  scanbutton.cpp  scanbutton.hpp  stopbutton.cpp  stopbutton.hpp
home-page/engine-status-monitor/: enginestatusmonitor.cpp  enginestatusmonitor.hpp
home-page/results-stream-viewer/: resultsstreamviewer.cpp  resultsstreamviewer.hpp
home-page/scan-areas-controller/: .gitignore  scanareascolumn.cpp  scanareascolumn.hpp  scanareascontroller.cpp  scanareascontroller.hpp
home-page/scan-results-monitor/: scanresultsmonitor.cpp  scanresultsmonitor.hpp
home-page/status-builtin-terminal/: statusbuiltinterminal.cpp  statusbuiltinterminal.hpp
page-switcher-bar/: pageswitcherbar.cpp  pageswitcherbar.hpp
results-stream-viewer/: resultsstreamviewer.cpp  resultsstreamviewer.hpp
sam-dummy-engine/: .gitignore  CMakeLists.txt  samdummyengine.cpp  samdummyengine.hpp
sam-dummy-engine/scan-areas-dummy-processor/: scanareasdummyprocessor.cpp  scanareasdummyprocessor.hpp
sam-stub-engine/: .gitignore  CMakeLists.txt  pepathlsmonitor.cpp  pepathlsmonitor.hpp  samengine.cpp  samengine.hpp
sam-stub-engine/PE-pathls-generator/: pepathlscollector.cpp  pepathlscollector.hpp  pepathlsgenerator.cpp  pepathlsgenerator.hpp
sam-stub-engine/scan-analyzer/: scananalyzer.cpp  scananalyzer.hpp
sam-stub-engine/scan-areas-processor/: scanareasprocessor.cpp  scanareasprocessor.hpp
scan-areas-controller/: .gitignore  scanareascolumn.cpp  scanareascolumn.hpp  scanareascontroller.cpp  scanareascontroller.hpp
status-builtin-terminal/: statusbuiltinterminal.cpp  statusbuiltinterminal.hpp
status-viewer/: statusviewer.cpp  statusviewer.h  statusviewer.hpp  summary.cpp  summary.hpp
tests/: .gitignore  consoletestsmain.cpp  consoletestsmain.hpp
